rns-lang/tests/snapshots/parser-outside_class_directive-eof_outside.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
; only a comment, no class at all

----- STDOUT -----

----- STDERR -----
Error: empty file
   ╭─[ test_data/integration/parser/outside_class_directive/eof_outside.ja:1:35 ]
   │
 1 │ ; only a comment, no class at all
   │                                   │ 
   │                                   ╰─ The file contains no class definition.
───╯
